# family-finance

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml
backend/: CLAUDE.md  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_import_automation.py  003_add_admin_features.py  004_add_parser_schemas.py
backend/app/: cli.py  config.py  database.py  main.py  seed_categories.py
backend/app/api/: accounts.py  admin.py  ai.py  auth.py  categories.py  dashboard.py  deps.py  imports.py  parser_schemas.py  transactions.py
backend/app/models/: __init__.py  account.py  category.py  import_job.py  institution.py  parser_schema.py  transaction.py  user.py
backend/app/plugins/: base.py  registry.py
backend/app/plugins/ai_providers/: claude_provider.py  openai_provider.py
backend/app/schemas/: account.py  ai.py  category.py  dashboard.py  import_job.py  institution.py  transaction.py  user.py
backend/app/services/: ai_query_service.py  auth_service.py  categorization_service.py  import_service.py  schema_inference_service.py
backend/app/tasks/: celery_app.py  import_tasks.py
backend/tests/: conftest.py  test_api_accounts.py  test_api_admin.py  test_api_auth.py  test_api_categories.py  test_api_dashboard.py  test_api_imports.py  test_api_transactions.py  test_auth.py  test_categorization_service.py  test_import_parser.py  test_import_service.py
backend/tests/fixtures/: sample_rocket_money.csv
docs/: ARCHITECTURE.md  (+1 more)
(+37 files in other folders)
